--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -4,10 +4,17 @@
             <h1 ng-switch-when="false">You are currently not logged in!</h1>
             <h1 ng-switch-when="true">Welcome back {{vm.account.login}}!</h1>
             <hr/>
-            <p class="lead" ng-switch-when="false">Please login or register</p>
+            <p class="lead" ng-switch-when="false">Please
+                <a href="" ng-click="vm.login()" id="login">sign in</a>
+                or
+                <a ui-sref="register" ng-click="vm.collapseNavbar()">register</a>
+                .
+            </p>
+
             <p class="lead" ng-switch-when="true">What is on your mind today?</p><br/><br/><br/>
             <div ng-switch-when="true" class="row">
-                <div class="col-md-4"><span class="glyphicon glyphicon-file" style="font-size: 60pt;"></span>
+                <div class="col-md-4">
+                    <span class="glyphicon glyphicon-file" ui-sref="home.create" style="font-size: 60pt;"></span>
                     <hr/>
                     <p class="lead">
                         <button class="btn btn-primary"
@@ -17,7 +24,8 @@
                         </button>
                     </p>
                 </div>
-                <div class="col-md-4"><span class="glyphicon glyphicon-folder-open" style="font-size: 60pt;"></span>
+                <div class="col-md-4">
+                    <span class="glyphicon glyphicon-folder-open" ui-sref="home.load" style="font-size: 60pt;"></span>
                     <hr/>
                     <p class="lead">
                         <button class="btn btn-primary"
@@ -28,8 +36,8 @@
                     </p>
                 </div>
                 <div ng-switch="vm.hasCurrentProject">
-                    <div ng-switch-when="true" class="col-md-4"><span class="glyphicon glyphicon-circle-arrow-right"
-                                                                      style="font-size: 60pt;"></span>
+                    <div ng-switch-when="true" class="col-md-4">
+                        <span class="glyphicon glyphicon-circle-arrow-right" ui-sref="map-editor" style="font-size: 60pt;"></span>
                         <hr/>
                         <p class="lead">
                             <button class="btn btn-primary"
