--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,20 +69,26 @@
 <!-- build:js app/app.js  -->
 <!-- inject:js -->
 <script src="app/app.module.js"></script>
-<script src="app/account/reset/finish/reset.finish.state.js"></script>
-<script src="app/account/reset/finish/reset.finish.controller.js"></script>
 <script src="app/account/reset/request/reset.request.state.js"></script>
 <script src="app/account/reset/request/reset.request.controller.js"></script>
+<script src="app/account/reset/finish/reset.finish.state.js"></script>
+<script src="app/account/reset/finish/reset.finish.controller.js"></script>
+<script src="app/setup/project/noproject.state.js"></script>
+<script src="app/setup/project/noproject.controller.js"></script>
 <script src="app/setup/script/script-setup.state.js"></script>
 <script src="app/setup/script/script-setup.controller.js"></script>
 <script src="app/setup/script/loadscript-dialog.controller.js"></script>
 <script src="app/setup/script/createscript-dialog.controller.js"></script>
-<script src="app/setup/project/noproject.state.js"></script>
-<script src="app/setup/project/noproject.controller.js"></script>
 <script src="app/setup/map/map-setup.state.js"></script>
 <script src="app/setup/map/map-setup.controller.js"></script>
 <script src="app/setup/map/loadmap-dialog.controller.js"></script>
 <script src="app/setup/map/createmap-dialog.controller.js"></script>
+<script src="app/blocks/interceptor/notification.interceptor.js"></script>
+<script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
+<script src="app/blocks/interceptor/auth.interceptor.js"></script>
+<script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
+<script src="app/services/user/user.service.js"></script>
+<script src="app/services/user/project-manager.service.js"></script>
 <script src="app/services/auth/register.service.js"></script>
 <script src="app/services/auth/principal.service.js"></script>
 <script src="app/services/auth/password.service.js"></script>
@@ -94,11 +100,15 @@
 <script src="app/services/auth/auth.oauth2.service.js"></script>
 <script src="app/services/auth/activate.service.js"></script>
 <script src="app/services/auth/account.service.js"></script>
-<script src="app/services/user/user.service.js"></script>
-<script src="app/services/user/project-manager.service.js"></script>
 <script src="app/layouts/navbar/navbar.controller.js"></script>
 <script src="app/layouts/navbar/active-link.directive.js"></script>
 <script src="app/layouts/error/error.state.js"></script>
+<script src="app/entities/player/player.state.js"></script>
+<script src="app/entities/player/player.service.js"></script>
+<script src="app/entities/player/player.controller.js"></script>
+<script src="app/entities/player/player-dialog.controller.js"></script>
+<script src="app/entities/player/player-detail.controller.js"></script>
+<script src="app/entities/player/player-delete-dialog.controller.js"></script>
 <script src="app/entities/script/script.state.js"></script>
 <script src="app/entities/script/script.service.js"></script>
 <script src="app/entities/script/script.controller.js"></script>
@@ -113,12 +123,6 @@
 <script src="app/entities/project/project-dialog.controller.js"></script>
 <script src="app/entities/project/project-detail.controller.js"></script>
 <script src="app/entities/project/project-delete-dialog.controller.js"></script>
-<script src="app/entities/player/player.state.js"></script>
-<script src="app/entities/player/player.service.js"></script>
-<script src="app/entities/player/player.controller.js"></script>
-<script src="app/entities/player/player-dialog.controller.js"></script>
-<script src="app/entities/player/player-detail.controller.js"></script>
-<script src="app/entities/player/player-delete-dialog.controller.js"></script>
 <script src="app/entities/map/map.state.js"></script>
 <script src="app/entities/map/map.service.js"></script>
 <script src="app/entities/map/map.controller.js"></script>
@@ -137,6 +141,14 @@
 <script src="app/entities/camera/camera-dialog.controller.js"></script>
 <script src="app/entities/camera/camera-detail.controller.js"></script>
 <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
+<script src="app/blocks/handlers/state.handler.js"></script>
+<script src="app/blocks/config/localstorage.config.js"></script>
+<script src="app/blocks/config/http.config.js"></script>
+<script src="app/blocks/config/compile.config.js"></script>
+<script src="app/blocks/config/alert.config.js"></script>
+<script src="app/admin/configuration/configuration.state.js"></script>
+<script src="app/admin/configuration/configuration.service.js"></script>
+<script src="app/admin/configuration/configuration.controller.js"></script>
 <script src="app/components/util/truncate-words.filter.js"></script>
 <script src="app/components/util/truncate-characters.filter.js"></script>
 <script src="app/components/util/sort.directive.js"></script>
@@ -159,50 +171,38 @@
 <script src="app/components/alert/alert.service.js"></script>
 <script src="app/components/alert/alert.directive.js"></script>
 <script src="app/components/alert/alert-error.directive.js"></script>
-<script src="app/blocks/interceptor/notification.interceptor.js"></script>
-<script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
-<script src="app/blocks/interceptor/auth.interceptor.js"></script>
-<script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
-<script src="app/blocks/handlers/state.handler.js"></script>
-<script src="app/blocks/config/localstorage.config.js"></script>
-<script src="app/blocks/config/http.config.js"></script>
-<script src="app/blocks/config/compile.config.js"></script>
-<script src="app/blocks/config/alert.config.js"></script>
-<script src="app/admin/tracker/tracker.state.js"></script>
-<script src="app/admin/tracker/tracker.service.js"></script>
-<script src="app/admin/tracker/tracker.controller.js"></script>
 <script src="app/admin/user-management/user-management.state.js"></script>
 <script src="app/admin/user-management/user-management.controller.js"></script>
 <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
 <script src="app/admin/user-management/user-management-detail.controller.js"></script>
 <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
+<script src="app/admin/tracker/tracker.state.js"></script>
+<script src="app/admin/tracker/tracker.service.js"></script>
+<script src="app/admin/tracker/tracker.controller.js"></script>
 <script src="app/admin/metrics/metrics.state.js"></script>
 <script src="app/admin/metrics/metrics.service.js"></script>
 <script src="app/admin/metrics/metrics.modal.controller.js"></script>
 <script src="app/admin/metrics/metrics.controller.js"></script>
+<script src="app/admin/logs/logs.state.js"></script>
+<script src="app/admin/logs/logs.service.js"></script>
+<script src="app/admin/logs/logs.controller.js"></script>
 <script src="app/admin/health/health.state.js"></script>
 <script src="app/admin/health/health.service.js"></script>
 <script src="app/admin/health/health.modal.controller.js"></script>
 <script src="app/admin/health/health.controller.js"></script>
-<script src="app/admin/logs/logs.state.js"></script>
-<script src="app/admin/logs/logs.service.js"></script>
-<script src="app/admin/logs/logs.controller.js"></script>
 <script src="app/admin/docs/docs.state.js"></script>
-<script src="app/admin/configuration/configuration.state.js"></script>
-<script src="app/admin/configuration/configuration.service.js"></script>
-<script src="app/admin/configuration/configuration.controller.js"></script>
 <script src="app/admin/audits/audits.state.js"></script>
 <script src="app/admin/audits/audits.service.js"></script>
 <script src="app/admin/audits/audits.controller.js"></script>
 <script src="app/account/settings/settings.state.js"></script>
 <script src="app/account/settings/settings.controller.js"></script>
-<script src="app/account/register/register.state.js"></script>
-<script src="app/account/register/register.controller.js"></script>
+<script src="app/account/activate/activate.state.js"></script>
+<script src="app/account/activate/activate.controller.js"></script>
 <script src="app/account/password/password.state.js"></script>
 <script src="app/account/password/password.controller.js"></script>
 <script src="app/account/password/password-strength-bar.directive.js"></script>
-<script src="app/account/activate/activate.state.js"></script>
-<script src="app/account/activate/activate.controller.js"></script>
+<script src="app/account/register/register.state.js"></script>
+<script src="app/account/register/register.controller.js"></script>
 <script src="app/scripting/timeline.directive.js"></script>
 <script src="app/scripting/scripting.state.js"></script>
 <script src="app/scripting/scripting.controller.js"></script>
@@ -213,6 +213,8 @@
 <script src="app/map/map-editor.controller.js"></script>
 <script src="app/map/load-background-dialog.controller.js"></script>
 <script src="app/map/fabric-map.directive.js"></script>
+<script src="app/map/fabric-map-dialog.service.js"></script>
+<script src="app/map/choose-entity.controller.js"></script>
 <script src="app/live/live.state.js"></script>
 <script src="app/live/live.controller.js"></script>
 <script src="app/home/loadproject-dialog.controller.js"></script>
