--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -36,12 +36,22 @@
         <div class="col-md-6">
             <div class="row" ng-switch="vm.hasScore">
                 <div class="col-md-12" ng-switch-when="true">
-                    <div class="text-right">
-                        <button type="button" class="btn btn-raised" ui-sref="script.load-score"><span
-                            class="glyphicon glyphicon-list"
-                            aria-hidden="true"></span> Change
-                            score
-                        </button>
+                    <div>
+                        <div class="text-right" ng-switch="vm.hasCue">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="button" class="btn btn-raised right" ui-sref="script.load-score"><span
+                                        class="glyphicon glyphicon-list"
+                                        aria-hidden="true"></span> Change
+                                        score
+                                    </button>
+                                    <br/>
+                                    <h4 class="text-muted left" ng-switch-when="false">
+                                        Please double click the timeline to add your first cue.
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <timeline map="vm.map" selected="vm.selected"></timeline>
                 </div>
