--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -212,6 +212,7 @@
 <script src="app/map/map-editor.state.js"></script>
 <script src="app/map/map-editor.controller.js"></script>
 <script src="app/map/load-background-dialog.controller.js"></script>
+<script src="app/map/choose-entity.controller.js"></script>
 <script src="app/map/fabric-map.directive.js"></script>
 <script src="app/map/fabric-map-dialog.service.js"></script>
 <script src="app/live/live.state.js"></script>
